# mle-project

./: data.yaml  dataset.py  pyproject.toml
core/: dataset.py  loader.py  train.py  train_new.py  train_paper.py
data/: preprocessed_dataset.csv
data/encoders/: labelEncoder.pkl
data/scalers/: dataScaler.pkl
tests/: test_dataset_sanity.py
